--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home page</title>
-</head>
-<body>
-    <h1>Home page</h1>
-</body>
-</html>
+{% extends "layout.html" %}
+{% block content %}
+    {% for x in posts %}
+        <h1>{{ x.title }}</h1>
+        <p>By {{ x.author }} on {{ x.date_posted }}</p>
+        <p>{{x.content}}</p>
+    {% endfor %}
+{% endblock content %}
